--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-confirm-alert": "^2.4.1",
     "react-devtools": "^3.6.3",
     "react-dom": "^16.9.0",
+    "react-native-scalable-image": "^1.0.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "unix-timestamp": "^0.2.0"
